--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.5.2</version>
+        </dependency>
 
-<!--        <dependency>-->
+        <!--        <dependency>-->
 <!--            <groupId>com.google.apis</groupId>-->
 <!--            <artifactId>google-api-services-search</artifactId>-->
 <!--            <version>v1-rev20231016-1.32.1</version>-->
