--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>5.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.3.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.3.18</version>
+        </dependency>
 
         <!--        <dependency>-->
 <!--            <groupId>com.google.apis</groupId>-->
