--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>spring-tx</artifactId>
             <version>5.3.18</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.5.2</version>
+        </dependency>
 
         <!--        <dependency>-->
 <!--            <groupId>com.google.apis</groupId>-->
