--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,16 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.5.2</version>
+        </dependency>
 
         <!--        <dependency>-->
 <!--            <groupId>com.google.apis</groupId>-->
